--- a/scripts/04-mitochondria-hunt.Rmd
+++ b/scripts/04-mitochondria-hunt.Rmd
@@ -1,28 +1,112 @@
 ---
 title: "mito-explore"
-output: html_document
+output: md_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+
+# Using blast
+
+Make blast index
+
+```
+/home/shared/ncbi-blast-2.11.0+/bin/makeblastdb \
+-in ../data/PGA_assembly.fasta \
+-dbtype nucl \
+-out ../results/04-mito-hunt/PGA_assembly
 ```
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+Blasting Mitochondria feature fasta to genome
 
-```{r cars}
-summary(cars)
+
+```
+/home/shared/ncbi-blast-2.11.0+/bin/blastn \
+-query ../data/Mmag-mito-features.fa \
+-db ../results/04-mito-hunt/PGA_assembly \
+-out ../results/04-mito-hunt/mit-genome_blastn_01.tab \
+-evalue 1E-20 \
+-num_threads 48 \
+-max_target_seqs 10 \
+-outfmt 6
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{bash}
+cat ../results/04-mito-hunt/mit-genome_blastn_01.tab
+```
+```
+/home/shared/ncbi-blast-2.11.0+/bin/blastn \
+-query ../data/Mmag-mito-features.fa \
+-db ../results/04-mito-hunt/PGA_assembly \
+-out ../results/04-mito-hunt/mit-genome_blastn_02.tab \
+-evalue 1E-50 \
+-num_threads 48 \
+-max_target_seqs 10 \
+-outfmt 6
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{bash}
+cat ../results/04-mito-hunt/mit-genome_blastn_02.tab
+```
+```{bash}
+/home/shared/ncbi-blast-2.11.0+/bin/blastn \
+-task blastn \
+-query ../data/Mmag-mito-features.fa \
+-db ../results/04-mito-hunt/PGA_assembly \
+-out ../results/04-mito-hunt/mit-genome_blastn_03.tab \
+-evalue 1E-20 \
+-num_threads 48 \
+-max_target_seqs 1 \
+-outfmt 6
+```
+```{bash}
+cat ../results/04-mito-hunt/mit-genome_blastn_03.tab
+```
+
+
+```{bash}
+/home/shared/ncbi-blast-2.11.0+/bin/blastn \
+-task blastn \
+-query ../data/Mmag-mito-features.fa \
+-db ../results/04-mito-hunt/PGA_assembly \
+-out ../results/04-mito-hunt/mit-genome_blastn_04.tab \
+-evalue 1E-50 \
+-num_threads 48 \
+-max_target_seqs 10 \
+-outfmt 6
+```
+
+```{bash}
+cat ../results/04-mito-hunt/mit-genome_blastn_04.tab
+```
+
+## Using Complete Mito genome
+
+
+```{bash}
+/home/shared/ncbi-blast-2.11.0+/bin/blastn \
+-task blastn \
+-query ../data/Mmag_mito.fa \
+-db ../results/04-mito-hunt/PGA_assembly \
+-out ../results/04-mito-hunt/mit-genome_blastn_05.tab \
+-evalue 1E-20 \
+-num_threads 48 \
+-max_target_seqs 10 \
+-outfmt 6
+
+cat ../results/04-mito-hunt/mit-genome_blastn_05.tab
+```
+
+```{bash}
+/home/shared/ncbi-blast-2.11.0+/bin/blastn \
+-query ../data/Mmag_mito.fa \
+-db ../results/04-mito-hunt/PGA_assembly \
+-out ../results/04-mito-hunt/mit-genome_blastn_06.tab \
+-evalue 1E-20 \
+-num_threads 48 \
+-max_target_seqs 10 \
+-outfmt 6
+
+cat ../results/04-mito-hunt/mit-genome_blastn_06.tab
+```
